# mediakit

kkit/: CMakeLists.txt  buffer.cc  buffer.hh  main.cc  noncopyable.hh  object.h  poller.cc  poller.hh  timer.cc  timer.h
