# CMakeLists.txt
# Copyright (C) orcaer@yeah.net. All rights reserved.
# Last modified: 2019-9-3

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(kkit)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)			

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/  SOURCES)


SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c2a   -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a  -O2")


MESSAGE("building...")

ADD_LIBRARY (${PROJECT_NAME} STATIC ${SOURCES} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -pthread)


SET(SOURCE ${PROJECT_SOURCE_DIR}/main.cc)

ADD_EXECUTABLE(hello ${SOURCE})
TARGET_LINK_LIBRARIES(hello kkit) 